--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ itsdangerous==2.0.1
 Jinja2==3.0.2
 MarkupSafe==2.0.1
 Werkzeug==2.0.2
-numpy==1.21.2
-scipy==1.7.1
-scikit-learn==1.0
-pandas==1.3.4
+numpy>=1.21.2
+scipy>=1.7.1
+scikit-learn>=1.0
+pandas>=1.3.4
 
